--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=CarApp
-database.url=jdbc:mysql://localhost:3306/springdemo
-database.username=root
-database.password=password
+spring.datasource.url=jdbc:mysql://localhost:3306/springdemo
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
